--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Ecommerce-app-2023",
   "version": "1.0.0",
   "description": "ecommerce rest api",
+  "proxy": "http://localhost:8080",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -27,6 +28,7 @@
     "mongoose": "^6.8.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
+    "razorpay": "^2.8.6",
     "react-icons": "^4.7.1",
     "slugify": "^1.6.5"
   }
