--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "SamKart",
   "proxy": "http://localhost:8080",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +11,7 @@
     "axios": "^1.2.5",
     "braintree-web-drop-in-react": "^1.2.1",
     "moment": "^2.29.4",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
