--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=8080
-MONGO_URL="mongodb+srv://saumyapani90:saumya9348@cluster0.cygswpa.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URL=mongodb+srv://saumyaflurn:11221133@cluster0.qc8dmtj.mongodb.net/ecom-db?retryWrites=true&w=majority
 REACT_API_APP=http://localhost:8080
 JWT_SECRET="supersecret"
